# actix-restful

./: Cargo.toml  README.md  TODO.org  cargo.toml
actix-restful/: Cargo.toml
actix-restful-cli/: Cargo.toml  Test.rs
actix-restful-cli/src/: main.rs
actix-restful-derive/: Cargo.toml
actix-restful-derive/src/: lib.rs
actix-restful/src/: lib.rs
examples/pagination/: Cargo.toml  Insomnia.json
examples/pagination/src/: main.rs
examples/simple/: Cargo.toml  Insomnia.json
examples/simple/src/: main.rs
