[package]
name = "pagination"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-restful = { path = "../../actix-restful" }
actix-restful-derive = { path = "../../actix-restful-derive" }
actix-web = "3.3.2"
anyhow = "1.0.51"
async-trait = "0.1.52"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.132" }
serde_json = "1.0.73"
